Quick css fix for filters alignment

--- a/app/styles/_explorer.scss
+++ b/app/styles/_explorer.scss
@@ -60,8 +60,8 @@
   background-color: rgba(222, 222, 222, 0.5);
   border-radius: 5px;
   padding: 20px 10px;
-  margin: 0 10px 20px 10px;
   color: $blue-dark;
+  margin-bottom: 20px;
   .form-group {
     padding: 0px 5px;
       select {
